--- a/assistant-web-backend/src/main/resources/application.properties
+++ b/assistant-web-backend/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=43813328
 spring.datasource.url=jdbc:mysql://localhost:3306/assistant
-spring.jpa.hibernate.ddl-auto=update
+server.port=8080
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
