--- a/.github/workflows/quality_check.yaml
+++ b/.github/workflows/quality_check.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: subosito/flutter-action@v2
 
       - name: Check format
-        run: flutter format --line-length 120 --set-exit-if-changed ./lib
+        run: flutter format --line-length 120 --set-exit-if-changed ./assistant-web-frontend/lib
 
       - name: Analyze code
         run: flutter analyze
