--- a/assistant-web-backend/src/main/resources/application.properties
+++ b/assistant-web-backend/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=43813328
-spring.datasource.url=jdbc:mysql://localhost:3306/assistant
+spring.datasource.password=12345678
+db.url=jdbc:mysql://pasionatiitest.mysql.database.azure.com:3306/teaching_assistant
+db.username=user
+db.password=Pas12345
 server.port=8080
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
