rest controllers for classes and students, modified one-to-many and inheritance model relationships, remove unnecessary constructors, added cors configuration

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ assistant-web-frontend/.flutter-plugins-dependencies
 assistant-web-frontend/.assistant-web-frontend.iml
 .idea
 .vs
+assistant.iml
+
