--- a/assistant-web-backend/src/main/resources/application.properties
+++ b/assistant-web-backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=sula
+spring.datasource.url=jdbc:mysql://pasionatiitest.mysql.database.azure.com:3306/teaching_assistant
+spring.datasource.username=user
+spring.datasource.password=Pas12345
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
