--- a/assistant-web-backend/src/main/resources/application.properties
+++ b/assistant-web-backend/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://pasionatiitest.mysql.database.azure.com:3306/
 spring.datasource.username=user
 spring.datasource.password=Pas12345
 server.port=8080
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
